Docs/portfolio polish (#129)
* Add environment variable support for JWT and CORS configuration

- Updated `.gitignore` to exclude `.env` files to prevent committing sensitive information.
- Modified `docker-compose.yaml` to include JWT secret and CORS allowed origins as environment variables.
- Enhanced `JwtSecurityConfig.java` to read allowed origins from application properties for better configurability.
- Updated `application-dev.yml` to use environment variables for JWT secret and added app-specific CORS settings.
- Introduced `SECURITY_NOTES.md` to provide guidelines on handling secrets and environment variables.

* Enhance quick-test.sh for caregiver functionality

- Updated the script to support caregiver login and token retrieval.
- Added functionality to create, get, and update reminders for residents by caregivers.
- Implemented meal requirements setting and retrieval for residents.
- Improved output messages for better clarity during test execution.